--- a/frontend/staticwebapp.config.json
+++ b/frontend/staticwebapp.config.json
@@ -32,5 +32,13 @@
     },
     "networking": {
   "allowedIpRanges": ["AzureFrontDoor.Backend"]
+},
+    "forwardingGateway": {
+  "requiredHeaders": {
+    "X-Azure-FDID" : "39dd5a5b-297a-4fe0-b9b2-fa76794606ad"
+  },
+  "allowedForwardedHosts": [
+    "my-sitename.azurefd.net"
+  ]
 }
 }
